--- a/changelog.txt
+++ b/changelog.txt
@@ -2,9 +2,13 @@
 Theme: Capture Free
 Author: Slocum Themes/Slocum Design Studio
 Author URI: http://slocumthemes.com/
-Current Version: 1.1.9
+Current Version: 1.2.0
 ==========================================
 
+
+1.2.0 // April 23 2015
+------------------------
+- Updated TGM Plugin Activation to version 2.4.1
 
 1.1.9 // January 30 2015
 ------------------------
